--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "three": "^0.177.0",
-    "buildCommand": "npm install && npm run build"
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
