--- a/portfolio/vercel.json
+++ b/portfolio/vercel.json
@@ -1,3 +1,5 @@
 {
-  "buildCommand": "npm install && npm run build"
+  "rootDirectory": "portfolio",
+  "buildCommand": "npm install && npm run build",
+  "outputDirectory": "dist"
 }
